test/Programs/ValidTests/typeNameInSig/typeNameInSig.fst
type F = Int -> Int

f : F
f x = x + x

main : Int
main = f 6
