test/Programs/InvalidTests/selectOnExternalChoice/selectOnExternalChoice.fst
f : &{A: Skip} -> Skip
f c = select A c

main : Int
main = 5
